<resources>
    <string name="app_name" translatable="false">Just Java</string>
    <string name="hello_world">Hello World!</string>
    <string name="action_settings">Settings</string>

    <string name="toppings" translatable="false">Toppings</string>
    <string name="thank_you" translatable="false">Thank you!</string>

    <string name="quantity" translatable="false">Quantity</string>
    <string name="Zero">0</string>
    <string name="order" translatable="false">Order</string>
    <string name="order_summary">Order Summary</string>
    <string name="zeroDollar">$10</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="whipped_cream" translatable="false">Whipped Cream</string>
    <string name="chocolate" translatable="false">Chocolate</string>
    <string name="name">Name</string>
</resources>
